--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
 
 <head>
     <meta charset="UTF-8" />
@@ -21,7 +21,8 @@
         <div class="sc">
             <div class="sr" id="sr"></div>
         </div>
-    </div>
+    </div><br><br>
+    <p>Made by <a href="https://github.com/phoebe-leong/clock" target="_blank">Ph03be</a> & <a href="https://github.com/GamearooCodes/clock">GamearooCodes</a></p>
 
     <script class="text/javascript">
         const deg = 6;
@@ -41,5 +42,4 @@
         });
     </script>
 </body>
-
 </html>
